# TEXT-project

./: README  lab.ipynb  pobierz.ipynb  process_nt.py  pyproject.toml  requirements.txt
authorship_attr/: distance.py  lab.ipynb  visualise.py
nt_author_wording_stats/: lab.ipynb
processing/: process_nt.py
