[tool.poetry]
name = "text-project"
version = "1"
description = "Fajny projekcik"
authors = ["Wiktor Ciołek and Anna Giszczak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kagglehub = "^0.3.7"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
