[tool.poetry]
name = "text-project"
version = "1"
description = "Fajny projekcik"
authors = ["Wiktor Ciołek and Anna Giszczak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kagglehub = "^0.3.7"
jupyter = "^1.1.1"
numpy = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
